fix align

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -42,11 +42,10 @@ body,
 }
 
 .App {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  flex-direction: row;
+
+width: 100%;
 }
+
 body {
   background-color: var(--color-background);
 }
