--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -8,9 +8,6 @@
   }
 }
 
-.Login-Container{
-
-}
 
 .left-container {
   background: var(--color-primary);
@@ -21,6 +18,7 @@
   margin-left: 1rem;
   padding: 4rem;
   min-height: 300px;
+  align-self: center;
 }
 
 .left-container h1 {
@@ -68,11 +66,12 @@
 }
 
 .right-container {
-  width: 50%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   margin-right: 3rem;
   min-width: 200px;
+  justify-content: center;
   align-items: center;
 }
 
@@ -117,6 +116,7 @@
   position: relative;
   height: 175px;
   min-width: 70%;
+  
 }
 
 .icon-right {
@@ -128,3 +128,8 @@
   top: 1rem;
 }
 
+.main-container{
+  width: 100%;
+  display: inline-flex;
+  height: 100%;
+}
